建構完畫面

--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,7 +1,10 @@
 // 官方的bs4 css
-@import "functions";
+@import 'functions';
 // 自己的bs4 css
-@import "./helpers/variables";
+@import './helpers/variables';
 // 官方的bs4 css
-@import "mixins";
-@import "bootstrap";
+@import 'mixins';
+@import 'bootstrap';
+@import 'tool';
+@import 'base';
+@import 'page';
