--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -1,16 +1,23 @@
 // *{
 //     outline:red 1px solid;
 // }
-*{
-    font-family: 'Noto Serif TC',-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+* {
+  font-family: 'Noto Serif TC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-ul{
-    margin: 0;
-    padding: 0;
+ul {
+  margin: 0;
+  padding: 0;
 }
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
-p{
-    margin: 0;
+p {
+  margin: 0;
+}
+h1,h2,h3,h4,h5,h6,span{
+  margin: 0;
+}
+label {
+  margin: 0;
 }
