--- a/app/assets/style/_tool.scss
+++ b/app/assets/style/_tool.scss
@@ -52,3 +52,6 @@ background-image: linear-gradient(to right, #ccc 0%, #ccc 50%, transparent 50%);
 background-size: 8px 1px;
 background-repeat: repeat-x;
 }
+.box-shadow{
+  box-shadow:0px 3px  6px #00000029;
+}
