--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -67,7 +67,7 @@ $colors: map-merge(
 );
 //**針對每次專案的色彩計畫不同，這裡修改與新增：
 //(新增顏色註記：)
-$primary:       $blue !default;
+$primary:       #00807E !default;//$blue
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
@@ -75,7 +75,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
-
+$light-gray:    #818A91 !default;
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 
@@ -88,7 +88,8 @@ $theme-colors: map-merge(
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "dark":       $dark,
+    "light-gray": $light-gray,
   ),
   $theme-colors
 );
