--- a/app/assets/style/_page.scss
+++ b/app/assets/style/_page.scss
@@ -4,14 +4,20 @@
   border-radius: 8px;
   margin-bottom: 100px;
   margin-top: 23px;
+  flex-direction: row;
 }
+
 .addTicketPicBox {
+  width: 50%;
   display: flex;
   flex-direction: column;
-  //   width: 50%;
+  img{
+    width: 100%;
+  object-fit: contain;
+  }
 }
 .addTicketForm {
-  width: 80%;
+  width: 50%;
   .title{
     display: flex;
     align-items: center;
@@ -27,15 +33,19 @@
     }
   }
 }
+
+
 .form__inputList {
   display: flex;
   align-items: center;
+  flex-direction: row;
   .form__label {
     color:$primary;
     font-weight: $font-weight-medium;
     margin-right: 8px;
   }
   .form__input {
+    width: 80%;
     flex-grow: 1;
     height: 38px;
     background-color: #fafafa;
@@ -43,7 +53,12 @@
     border: 0;
     border-bottom: 1px solid $primary;
     padding: 4px;
+    &::-webkit-input-placeholder { color:$light-gray; }
+    &::-moz-placeholder { color: $light-gray; }
+    &::-moz-placeholder{color:$light-gray;}
+    &:-ms-input-placeholder{color: $light-gray;}
   }
+  
   .form__textarea{
     height: 120px;
   }
@@ -52,21 +67,66 @@
   }
 }
 
+@media(max-width:992px){
+  .addTicketPannel{
+    padding: 36px;
+  }
+  .addTicketForm {
+    width: 75%;
+  }
+  
+}
+@media (max-width:768px) {
+  .form__inputList{
+    flex-direction: column;
+    align-items: flex-start;
+    .form__label{
+      margin-bottom: 4px;
+      margin-left: 12px;
+      font-size: 14px;
+    }
+    .form__input {
+      width: 100%;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .addTicketPannel{
+    flex-direction: column;
+    padding: 24px;
+  }
+  .addTicketForm {
+    width: 100%;
+  }
+  .addTicketPicBox {
+    flex-direction: row;
+    height: 240px;
+    img{
+      // width: 50%;
+      height: 100%;
+    }
+  }
+}
 .mainArea{
   background-color: #F7F7F7;
   padding: 56px 0 ;
 }
 .travelCardList{
   display: flex;
-
+  // justify-content: space-between;
+  flex-wrap: wrap;
 }
 .travelCard{
-  height: 100%;
+  // height: 100%;
   background-color: #fff;
   border-radius: 4px;
   position: relative;
   display: flex;
   flex-direction: column;
+  width: 31.3333%;
+  //最後一排不知道怎辦了
+  margin-bottom: 36px;
+  margin-right: 2%;
   .card__place{
     display: flex;
     padding: 8px 20px;
@@ -135,5 +195,76 @@
         font-size: 16px;
         font-weight: $font-weight-medium;
       }
+  }
+}
+.tavelFilterForm{
+  margin-bottom: 48px;
+  display: flex;
+  align-items: center;
+  .form__inputList{
+    width: 31.3333%;
+    display: flex;
+    justify-content: flex-end;
+    .travalSelect{
+      width: 75%;
+      height: 38px;
+      border:1px solid #CED4DA;
+      color:$light-gray;
+    }
+    margin-right: 2%;
+  }
+  .filterResult{
+    // display: block;
+    color:$light-gray;
+  }
+}
+
+@media(max-width:1200px){
+.travelCard__content{
+
+  .card__price{
+    font-size: 16px;
+  }
+}
+.travelCard{
+  width: 48%;
+  margin-right: 2%;
+}
+.tavelFilterForm{
+  .form__inputList{
+    width: 48%;
+  }
+}
+
+}
+@media(max-width:576px){
+  .travelCard__content{
+    .card__name{
+      font-size: 20px;
+    }
+  }
+  }
+@media (max-width: 768px) {
+  
+  .tavelFilterForm{
+    margin-bottom: 24px;
+    flex-direction: column;
+    .form__inputList{
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: 16px;
+      .travalSelect{
+      width: 100%;
+      }
+
+    }
+    
+  }
+  .travelCardList{
+    justify-content: space-between;
+  }
+  .travelCard{
+    width: 100%;
+    margin-right: 0;
   }
 }
