修改套組數量

--- a/app/assets/style/_page.scss
+++ b/app/assets/style/_page.scss
@@ -88,6 +88,10 @@
     .form__input {
       width: 100%;
     }
+    .form__inputBtn{
+      width: 100%;
+      padding: 10px 48px;
+    }
   }
 }
 @media (max-width: 768px) {
