--- a/app/assets/style/_page.scss
+++ b/app/assets/style/_page.scss
@@ -1,6 +1,6 @@
-.addTicketPannel {
+.addTicketPanel {
   display: flex;
-  padding:60px 95px;
+  padding: 60px 95px;
   border-radius: 8px;
   margin-bottom: 100px;
   margin-top: 23px;
@@ -11,14 +11,14 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  img{
+  img {
     width: 100%;
     object-fit: contain;
   }
 }
 .addTicketForm {
   width: 50%;
-  .title{
+  .title {
     display: flex;
     align-items: center;
     color: $primary;
@@ -26,7 +26,7 @@
     font-weight: $font-weight-bold;
     padding-bottom: 10px;
     border-bottom: 2px solid $primary;
-    .fas{
+    .fas {
       // line-height: 33px;
       font-size: 20px;
       margin-right: 6px;
@@ -34,13 +34,12 @@
   }
 }
 
-
 .form__inputList {
   display: flex;
   align-items: center;
   flex-direction: row;
   .form__label {
-    color:$primary;
+    color: $primary;
     font-weight: $font-weight-medium;
     margin-right: 8px;
   }
@@ -53,34 +52,45 @@
     border: 0;
     border-bottom: 1px solid $primary;
     padding: 4px;
-    &::-webkit-input-placeholder { color:$light-gray; }
-    &::-moz-placeholder { color: $light-gray; }
-    &::-moz-placeholder{color:$light-gray;}
-    &:-ms-input-placeholder{color: $light-gray;}
+    &::-webkit-input-placeholder {
+      color: $light-gray;
+    }
+    &::-moz-placeholder {
+      color: $light-gray;
+    }
+    &::-moz-placeholder {
+      color: $light-gray;
+    }
+    &:-ms-input-placeholder {
+      color: $light-gray;
+    }
   }
-  
-  .form__textarea{
+
+  .form__textarea {
     height: 120px;
   }
-  .form__inputBtn{
+  .form__inputBtn {
     padding: 10px 48px;
   }
 }
+.alertMessage {
+  margin-bottom: 16px;
+  color: red;
+}
 
-@media(max-width:992px){
-  .addTicketPannel{
+@media (max-width: 992px) {
+  .addTicketPanel {
     padding: 36px;
   }
   .addTicketForm {
     width: 75%;
   }
-  
 }
-@media (max-width:768px) {
-  .form__inputList{
+@media (max-width: 768px) {
+  .form__inputList {
     flex-direction: column;
     align-items: flex-start;
-    .form__label{
+    .form__label {
       margin-bottom: 4px;
       margin-left: 12px;
       font-size: 14px;
@@ -88,14 +98,14 @@
     .form__input {
       width: 100%;
     }
-    .form__inputBtn{
+    .form__inputBtn {
       width: 100%;
       padding: 10px 48px;
     }
   }
 }
 @media (max-width: 768px) {
-  .addTicketPannel{
+  .addTicketPanel {
     flex-direction: column;
     padding: 24px;
   }
@@ -105,36 +115,34 @@
   .addTicketPicBox {
     flex-direction: row;
     height: 240px;
-    img{
+    img {
       // width: 50%;
       height: 100%;
     }
   }
 }
-.mainArea{
-  background-color: #F7F7F7;
-  padding: 56px 0 ;
+.mainArea {
+  background-color: #f7f7f7;
+  padding: 56px 0;
 }
-.travelCardList{
+.travelCardList {
   display: flex;
-  // justify-content: space-between;
   flex-wrap: wrap;
 }
-.travelCard{
-  // height: 100%;
+.travelCard {
+  margin-bottom: 36px;
+}
+.travelCard__container {
   background-color: #fff;
   border-radius: 4px;
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 31.3333%;
-  //最後一排不知道怎辦了
-  margin-bottom: 36px;
-  margin-right: 2%;
-  .card__place{
+  height: 100%;
+  .card__place {
     display: flex;
     padding: 8px 20px;
-    background-color: #64C3BF;
+    background-color: #64c3bf;
     color: $white;
     border-radius: 0px 4px 4px 0px;
     position: absolute;
@@ -147,27 +155,28 @@
   width: 100%;
   height: 180px;
   object-fit: cover;
+  border-radius: 4px 4px 0 0;
 }
-.travelCard__content{
+.travelCard__content {
   padding: 20px;
   position: relative;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  .card__name{
+  .card__name {
     font-size: 24px;
     color: $primary;
     padding-bottom: 4px;
     border-bottom: 1px solid $primary;
     margin-bottom: 16px;
   }
-  .card__txt{
-    color:$light-gray;
+  .card__txt {
+    color: $light-gray;
     margin-bottom: 20px;
   }
-  
-  .card__rank{
+
+  .card__rank {
     display: flex;
     padding: 5px 8px;
     background-color: $primary;
@@ -178,97 +187,103 @@
     left: 0;
     transform: translateY(-50%);
   }
-  .card__info{
+  .card__info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2px;
-    color:$primary;
+    color: $primary;
   }
-  .crad__num{
-    .icon{
+  .card__num {
+    .icon {
       margin-right: 4px;
     }
   }
-  .card__price{
+  .card__price {
     display: flex;
     align-items: center;
     font-weight: $font-weight-medium;
     font-size: 32px;
-      span{
-        font-size: 16px;
-        font-weight: $font-weight-medium;
-      }
+    span {
+      font-size: 16px;
+      font-weight: $font-weight-medium;
+    }
   }
 }
-.tavelFilterForm{
+.tavelFilterForm {
   margin-bottom: 48px;
   display: flex;
   align-items: center;
-  .form__inputList{
+  .form__inputList {
     width: 31.3333%;
     display: flex;
     justify-content: flex-end;
-    .travalSelect{
+    .travelSelect {
       width: 75%;
       height: 38px;
-      border:1px solid #CED4DA;
-      color:$light-gray;
+      border: 1px solid #ced4da;
+      color: $light-gray;
     }
     margin-right: 2%;
   }
-  .filterResult{
+  .filterResult {
     // display: block;
-    color:$light-gray;
+    color: $light-gray;
   }
 }
 
-@media(max-width:1200px){
-.travelCard__content{
-
-  .card__price{
-    font-size: 16px;
-  }
-}
-.travelCard{
-  width: 48%;
-  margin-right: 2%;
-}
-.tavelFilterForm{
-  .form__inputList{
-    width: 48%;
-  }
-}
-
-}
-@media(max-width:576px){
-  .travelCard__content{
-    .card__name{
-      font-size: 20px;
+@media (max-width: 1200px) {
+  .travelCard__content {
+    .card__price {
+      font-size: 16px;
     }
   }
+
+  .tavelFilterForm {
+    .form__inputList {
+      width: 48%;
+    }
   }
+}
+// @media (max-width: 992px) {
+//   .travelCard {
+//     margin-bottom: 36px;
+//     &:nth-last-child(3) {
+//       margin-bottom: 36px;
+//     }
+//     &:nth-last-child(2) {
+//       margin-bottom: 0px;
+//     }
+//   }
+// }
+
 @media (max-width: 768px) {
-  
-  .tavelFilterForm{
+  .tavelFilterForm {
     margin-bottom: 24px;
     flex-direction: column;
-    .form__inputList{
+    .form__inputList {
       width: 100%;
       margin-right: 0;
       margin-bottom: 16px;
-      .travalSelect{
-      width: 100%;
+      .travelSelect {
+        width: 100%;
       }
-
     }
-    
   }
-  .travelCardList{
+  .travelCardList {
     justify-content: space-between;
   }
-  .travelCard{
-    width: 100%;
-    margin-right: 0;
+  .travelCard {
+    margin-bottom: 36px;
+    &:last-child {
+      margin-bottom: 0px;
+    }
+  }
+}
+@media (max-width: 576px) {
+  .travelCard__content {
+    .card__name {
+      font-size: 20px;
+    }
   }
 }
