--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -27,12 +27,13 @@
     <!-- 外掛 -->
     <script src="./assets/js/vendors.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.js"></script> -->
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <!-- 外掛自訂 -->
     <!-- <script src="./assets/js/helpers/swiper.js"></script> -->
     <!-- 自訂 -->
-    <script src="./assets/js/data.js"></script>
+    <!-- <script src="./assets/js/data.js"></script> -->
     <script src="./assets/js/all.js"></script>
   </body>
 </html>
