--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -18,6 +18,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
+    <!-- c3 -->
+    <link href="/path/to/c3.css" rel="stylesheet" />
     <!-- my -->
     <link rel="stylesheet" href="./assets/style/all.css" />
   </head>
@@ -28,6 +30,9 @@
     <script src="./assets/js/vendors.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- Load d3.js and c3.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.js"></script> -->
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <!-- 外掛自訂 -->
@@ -35,5 +40,6 @@
     <!-- 自訂 -->
     <!-- <script src="./assets/js/data.js"></script> -->
     <script src="./assets/js/all.js"></script>
+    <script src="./assets/js/helpers/c3.js"></script>
   </body>
 </html>
