--- a/app/assets/style/_page.scss
+++ b/app/assets/style/_page.scss
@@ -236,18 +236,6 @@
     }
   }
 }
-// @media (max-width: 992px) {
-//   .travelCard {
-//     margin-bottom: 36px;
-//     &:nth-last-child(3) {
-//       margin-bottom: 36px;
-//     }
-//     &:nth-last-child(2) {
-//       margin-bottom: 0px;
-//     }
-//   }
-// }
-
 @media (max-width: 768px) {
   .tavelFilterForm {
     margin-bottom: 24px;
@@ -278,7 +266,12 @@
   }
 }
 
-// #chart {
-//   height: 160px;
-//   width: 160px;
-// }
+.chart--location {
+  width: 200px;
+  height: 240px;
+  .c3-legend-item,
+  .c3-chart-arcs-title {
+    fill: #4b4b4b;
+    font-size: 14px;
+  }
+}
