--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -19,7 +19,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <!-- c3 -->
-    <link href="/path/to/c3.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css"
+    />
     <!-- my -->
     <link rel="stylesheet" href="./assets/style/all.css" />
   </head>
